--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="project-card">
         <h2>Projeto 2</h2>
-        <p>Descrição do projeto 2.</p>
+        <p>Descrição do proojeto 2.</p>
       </div>
       <div class="project-card">
         <h2>Projeto 3</h2>
