--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section id="sobre" class="section">
     <div class="container">
       <h1>Sobre Mim</h1>
-      <p>Olá! Eu sou [Seu Nome], um desenvolvedor web apaixonado por criar soluções inovadoras.</p>
+      <p>Olá! Eu sou [Rebecca], um desenvolvedor web apaixonado por criar soluções inovadoras.</p>
     </div>
   </section>
 
