--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   <!-- Seção Sobre -->
   <section id="sobre" class="section">
+    <img
+
     <div class="container">
       <h1>Sobre Mim</h1>
       <p>Olá! Eu sou [Rebecca], um desenvolvedor web apaixonado por criar soluções inovadoras.</p>
